✨ : add pgAdmin service and configuration to docker-compose

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ RETRY_BACKOFF_SECONDS=5
 # ENABLE_AI_ANALYSIS=false
 # AI_API_KEY=your_ai_api_key_here
 
+# pgAdmin Configuration
+PGADMIN_EMAIL=admin@hermes.local
+PGADMIN_PASSWORD=admin
+PGADMIN_PORT=5050
+
 # Metabase Configuration (未來使用)
 # METABASE_PORT=3000
 # METABASE_DB=hermes_metabase
