✨: implement chat message collection and database management for Hermes Worker

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,14 @@ POSTGRES_USER=hermes
 POSTGRES_PASSWORD=hermes
 POSTGRES_PORT=5432
 
+# Database URL (composed from above values)
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${POSTGRES_DB}
+
 # YouTube API Configuration
 YOUTUBE_API_KEY=your_youtube_api_key_here
 
 # Worker Configuration
+YOUTUBE_URL=https://www.youtube.com/watch?v=jfKfPfyJRdk
 POLL_INTERVAL=60
 ENABLE_BACKFILL=false
 RETRY_MAX_ATTEMPTS=3
@@ -19,7 +23,7 @@ RETRY_BACKOFF_SECONDS=5
 # AI_API_KEY=your_ai_api_key_here
 
 # pgAdmin Configuration
-PGADMIN_EMAIL=admin@hermes.local
+PGADMIN_EMAIL=admin@example.com
 PGADMIN_PASSWORD=admin
 PGADMIN_PORT=5050
 
