--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,9 +69,8 @@ services:
       retries: 5
 
   hermes-worker:
-    build:
-      context: ./hermes_worker
-      dockerfile: Dockerfile
+    # To rebuild: docker build -t hermes-worker:v1.0.1 ./hermes_worker
+    image: hermes-worker:v1.0.1
     container_name: hermes-worker
     env_file:
       - .env
