--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ PGADMIN_PORT=5050
 # Metabase Configuration (未來使用)
 # METABASE_PORT=3000
 # METABASE_DB=hermes_metabase
+
+# Gemini API Configuration
+GEMINI_API_KEY=your_gemini_api_key_here
