--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ POLL_INTERVAL=60
 ENABLE_BACKFILL=false
 RETRY_MAX_ATTEMPTS=3
 RETRY_BACKOFF_SECONDS=5
+CHAT_WATCHDOG_TIMEOUT=1800
+CHAT_WATCHDOG_CHECK_INTERVAL=600
 
 # Airflow Configuration
 AIRFLOW_IMAGE_NAME=apache/airflow:2.11.0
