--- a/.env.example
+++ b/.env.example
@@ -27,21 +27,12 @@ AIRFLOW_FERNET_KEY=your_fernet_key_here_32_chars_long
 AIRFLOW_WEBSERVER_PORT=8080
 _AIRFLOW_WWW_USER_USERNAME=airflow
 _AIRFLOW_WWW_USER_PASSWORD=airflow
-_PIP_ADDITIONAL_REQUIREMENTS=google-generativeai jieba emoji
-
-# ETL Configuration (未來使用)
-# ETL_INTERVAL=300
-# ENABLE_AI_ANALYSIS=false
-# AI_API_KEY=your_ai_api_key_here
+_PIP_ADDITIONAL_REQUIREMENTS=google-generativeai==0.8.6 jieba==0.42.1 emoji==2.14.0
 
 # pgAdmin Configuration
 PGADMIN_EMAIL=admin@example.com
 PGADMIN_PASSWORD=admin
 PGADMIN_PORT=5050
-
-# Metabase Configuration (未來使用)
-# METABASE_PORT=3000
-# METABASE_DB=hermes_metabase
 
 # Gemini API Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
