--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,11 +95,12 @@ jobs:
     name: Build Backend Image
     runs-on: ubuntu-latest
     needs: [detect-changes, test-backend]
-    # 只在 backend 有變更 或 手動部署時 build
+    # 只在 PR/Push 且 backend 有變更時 build（手動部署由 deploy job 處理）
     if: |
       always() &&
       needs.test-backend.result == 'success' &&
-      (github.event_name == 'workflow_dispatch' || needs.detect-changes.outputs.backend == 'true')
+      github.event_name != 'workflow_dispatch' &&
+      needs.detect-changes.outputs.backend == 'true'
     
     steps:
       - name: Checkout code
@@ -122,9 +123,10 @@ jobs:
     name: Build Frontend Image
     runs-on: ubuntu-latest
     needs: detect-changes
-    # 只在 frontend 有變更 或 手動部署時 build
+    # 只在 PR/Push 且 frontend 有變更時 build（手動部署由 deploy job 處理）
     if: |
-      github.event_name == 'workflow_dispatch' || needs.detect-changes.outputs.frontend == 'true'
+      github.event_name != 'workflow_dispatch' &&
+      needs.detect-changes.outputs.frontend == 'true'
     
     steps:
       - name: Checkout code
@@ -147,9 +149,10 @@ jobs:
     name: Build Worker Image
     runs-on: ubuntu-latest
     needs: detect-changes
-    # 只在 worker 有變更 或 手動部署時 build
+    # 只在 PR/Push 且 worker 有變更時 build（手動部署由 deploy job 處理）
     if: |
-      github.event_name == 'workflow_dispatch' || needs.detect-changes.outputs.worker == 'true'
+      github.event_name != 'workflow_dispatch' &&
+      needs.detect-changes.outputs.worker == 'true'
     
     steps:
       - name: Checkout code
