--- a/dashboard/frontend/package.json
+++ b/dashboard/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hermes-dashboard",
+    "name": "youtube-live-chat-analyzer-dashboard",
     "private": true,
     "version": "0.0.0",
     "type": "module",
