feat(etl): implement native ETL scheduler and admin dashboard
- Add native Python ETL scheduler using APScheduler to replace Airflow
- Implement core processors: ChatProcessor, TextProcessor, WordDiscoveryProcessor
- Add REST APIs for managing ETL jobs, configurations, and prompt templates
- Add Admin Dashboard components: ETLJobsManager, ETLSettingsManager, PromptTemplatesManager
- Add database schemas for ETL settings and prompt templates

--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,23 @@ PGADMIN_EMAIL=admin@example.com
 PGADMIN_PASSWORD=admin
 PGADMIN_PORT=5050
 
-# Gemini API Configuration
+# Gemini API Configuration (用於 AI 詞彙發現)
 GEMINI_API_KEY=your_gemini_api_key_here
 
+# ETL Scheduler Configuration (APScheduler)
+# 是否啟用 ETL 排程器（設為 false 可停用所有排程任務）
+ENABLE_ETL_SCHEDULER=true
+
+# Frontend Configuration
 VITE_API_BASE_URL=http://localhost:8000
+
+# ===========================================
+# 以下設定可在 Dashboard UI 中調整 (Admin > ETL Jobs > Settings)
+# 這裡的值僅作為參考，實際值儲存在資料庫 etl_settings 表
+# ===========================================
+# PROCESS_CHAT_START_TIME=       # 處理起始時間 (ISO 格式，空白則從 7 天前開始)
+# PROCESS_CHAT_BATCH_SIZE=1000   # 每批處理的訊息數量
+# PROCESS_CHAT_RESET=false       # 重置處理表
+# DISCOVER_NEW_WORDS_ENABLED=true       # 啟用 AI 詞彙發現
+# DISCOVER_NEW_WORDS_MIN_CONFIDENCE=0.7 # 最低信心分數
+# DISCOVER_NEW_WORDS_BATCH_SIZE=500     # AI 分析批次大小
