--- a/dashboard/backend/requirements.txt
+++ b/dashboard/backend/requirements.txt
@@ -4,3 +4,6 @@ sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 emoji==2.10.1
+apscheduler==3.10.4
+jieba==0.42.1
+google-generativeai==0.8.3
