--- a/.env.example
+++ b/.env.example
@@ -19,15 +19,17 @@ RETRY_BACKOFF_SECONDS=5
 CHAT_WATCHDOG_TIMEOUT=1800
 CHAT_WATCHDOG_CHECK_INTERVAL=600
 
-# Airflow Configuration
-AIRFLOW_IMAGE_NAME=apache/airflow:2.11.0
-AIRFLOW_UID=50000
-AIRFLOW_PROJ_DIR=./airflow
-AIRFLOW_FERNET_KEY=your_fernet_key_here_32_chars_long
-AIRFLOW_WEBSERVER_PORT=8080
-_AIRFLOW_WWW_USER_USERNAME=airflow
-_AIRFLOW_WWW_USER_PASSWORD=airflow
-_PIP_ADDITIONAL_REQUIREMENTS=google-generativeai==0.8.6 jieba==0.42.1 emoji==2.14.0
+# [DEPRECATED] Airflow Configuration
+# Note: Airflow has been replaced by APScheduler built into Dashboard Backend.
+# These settings are kept for reference only.
+# AIRFLOW_IMAGE_NAME=apache/airflow:2.11.0
+# AIRFLOW_UID=50000
+# AIRFLOW_PROJ_DIR=./airflow
+# AIRFLOW_FERNET_KEY=your_fernet_key_here_32_chars_long
+# AIRFLOW_WEBSERVER_PORT=8080
+# _AIRFLOW_WWW_USER_USERNAME=airflow
+# _AIRFLOW_WWW_USER_PASSWORD=airflow
+# _PIP_ADDITIONAL_REQUIREMENTS=google-generativeai==0.8.6 jieba==0.42.1 emoji==2.14.0
 
 # pgAdmin Configuration
 PGADMIN_EMAIL=admin@example.com
