--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -300,6 +300,7 @@ services:
       APP_ENV: ${APP_ENV:-prod}
       APP_WORKERS: ${APP_WORKERS:-4}
       DATABASE_URL: postgresql://${POSTGRES_USER:-hermes}:${POSTGRES_PASSWORD:-hermes}@postgres:5432/${POSTGRES_DB:-hermes}
+      YOUTUBE_API_KEY: ${YOUTUBE_API_KEY:-}
       GEMINI_API_KEY: ${GEMINI_API_KEY:-}
       ENABLE_ETL_SCHEDULER: ${ENABLE_ETL_SCHEDULER:-true}
       TEXT_ANALYSIS_DIR: /app/text_analysis
