chore(ci): include workflow changes in path filters
- Update paths-filter to trigger jobs when .github/workflows/** changes
- Ensures CI file modifications are tested across all services

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,13 @@ jobs:
           filters: |
             backend:
               - 'dashboard/backend/**'
+              - '.github/workflows/**'
             frontend:
               - 'dashboard/frontend/**'
+              - '.github/workflows/**'
             worker:
               - 'collector/**'
+              - '.github/workflows/**'
 
   test-backend:
     name: Backend Unit Tests
