feat(collector): enhance configuration and error handling
- Add new environment variables to .env.example for better documentation
- Improve config.py with enhanced configuration loading
- Refactor main.py with better error handling and logging

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ YOUTUBE_API_KEY=your_youtube_api_key_here
 
 # Worker Configuration
 YOUTUBE_URL=https://www.youtube.com/watch?v=jfKfPfyJRdk
+# USE_ENV_YOUTUBE_URL: If true, collector will only read YOUTUBE_URL from environment variable
+# and will NOT query PostgreSQL for youtube_url setting. Default: false
+USE_ENV_YOUTUBE_URL=false
 POLL_INTERVAL=60
 ENABLE_BACKFILL=false
 RETRY_MAX_ATTEMPTS=3
