feat: add watchdog for stats collector
- Implement StatsWatchdog to monitor and restart hung stats collectors
- Add STATS_WATCHDOG_TIMEOUT configuration (default 5 minutes)
- Track last poll time in StatsCollector loop
- Auto-recover from stats collection freezes without full service restart

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,7 @@ RETRY_MAX_ATTEMPTS=3
 RETRY_BACKOFF_SECONDS=5
 CHAT_WATCHDOG_TIMEOUT=900
 CHAT_WATCHDOG_CHECK_INTERVAL=300
+STATS_WATCHDOG_TIMEOUT=300
 
 # [DEPRECATED] Airflow Configuration
 # Note: Airflow has been replaced by APScheduler built into Dashboard Backend.
