feat: add data backup and auto-recovery for collector
- Save failed buffer flushes to disk JSON files in /data/backup
- Auto-import backup files on collector startup in background thread
- Add standalone utility import_backup.py for manual recovery
- Mount persistent volume 'collector-backup' to preserve data across restarts
- Prevent data loss during database outages

--- a/collector/Dockerfile
+++ b/collector/Dockerfile
@@ -19,7 +19,7 @@ COPY . .
 
 # Create non-root user for security
 RUN groupadd -r hermes && useradd -r -g hermes hermes
-RUN chown -R hermes:hermes /app
+RUN mkdir -p /data/backup && chown -R hermes:hermes /app /data/backup
 USER hermes
 
 # Default command
